# GraphEditor

./: CMakeLists.txt  Canvas.cpp  Canvas.h  Canvas_tests.cpp  ChooseWeightApp.cpp  ChooseWeightApp.h  Color.cpp  Color.h  Doxyfile  Graph.cpp  Graph.h  GraphEditorApp.cpp  GraphEditorApp.h  Graph_tests.cpp  PathEntryDialog.cpp  PathEntryDialog.h  README.md  VertexEntryDialog.cpp  VertexEntryDialog.h  WeightEntryDialog.cpp  WeightEntryDialog.h  custom_styles.css  design.glade  design_choose_weight.glade  design_new.glade  design_new_unix.glade  design_old.glade  main.cpp  mainpage.dox  unix_CMakeLists.txt  windows_CMakeLists.txt
Icons/: AddEdgeIcon.psd  AddVertexIcon.psd  ChangeColorIcon.psd  ChangeWeightIcon.psd  GetPrintoutButton.psd  RunAlgorithmButton.psd
doc/html/: _canvas_8cpp.html  _canvas_8h.html  _canvas_8h_source.html  _color_8cpp.html  _color_8h.html  _color_8h_source.html  _graph_8cpp.html  _graph_8h.html  _graph_8h_source.html  _graph_editor_app_8cpp.html  _graph_editor_app_8h.html  _graph_editor_app_8h_source.html  _path_entry_dialog_8cpp.html  _path_entry_dialog_8h.html  _path_entry_dialog_8h_source.html  _vertex_entry_dialog_8cpp.html  _vertex_entry_dialog_8h.html  _vertex_entry_dialog_8h_source.html  _weight_entry_dialog_8cpp.html  _weight_entry_dialog_8h.html  _weight_entry_dialog_8h_source.html  annotated.html  class_canvas-members.html  class_canvas.html  class_color-members.html  class_color.html  class_graph-members.html  class_graph.html  class_graph_editor_app-members.html  class_graph_editor_app.html  class_graph_test_accessor-members.html  class_graph_test_accessor.html  class_path_entry_dialog-members.html  class_path_entry_dialog.html  class_vertex_entry_dialog-members.html  class_vertex_entry_dialog.html  class_weight_entry_dialog-members.html  class_weight_entry_dialog.html  classes.html  dir_2067553e87dbab5d4233a933475b8085.html  (+21 more)
doc/latex/: _canvas_8cpp.tex  _canvas_8h.tex  _canvas_8h_source.tex  _color_8cpp.tex  _color_8h.tex  _color_8h_source.tex  _graph_8cpp.tex  _graph_8h.tex  _graph_8h_source.tex  _graph_editor_app_8cpp.tex  _graph_editor_app_8h.tex  _graph_editor_app_8h_source.tex  _path_entry_dialog_8cpp.tex  _path_entry_dialog_8h.tex  _path_entry_dialog_8h_source.tex  _vertex_entry_dialog_8cpp.tex  _vertex_entry_dialog_8h.tex  _vertex_entry_dialog_8h_source.tex  _weight_entry_dialog_8cpp.tex  _weight_entry_dialog_8h.tex  _weight_entry_dialog_8h_source.tex  annotated.tex  class_canvas.eps  class_canvas.tex  class_color.tex  class_graph.tex  class_graph_editor_app.eps  class_graph_editor_app.tex  class_graph_test_accessor.tex  class_path_entry_dialog.eps  class_path_entry_dialog.tex  class_vertex_entry_dialog.eps  class_vertex_entry_dialog.tex  class_weight_entry_dialog.tex  dir_2067553e87dbab5d4233a933475b8085.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6df1ba428a0157b93a3749ecb1671ed8.tex  dir_7d6a65ce1b9dd88d61878b6298542596.tex  dir_7fe55887cb1398f4336b117fe9eb088d.tex  (+8 more)
docs/html/: _canvas_8cpp.html  (+333 more)
src/: main.cpp
tests/: Canvas_tests.cpp  GraphEditorApp_tests.cpp  Graph_tests.cpp
(+269 files in other folders)
